Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5588

test_rpc_secure_recv_timed_out: TypeError

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.9.0
    • Impala 2.10.0
    • Infrastructure
    • None

    Description

      custom_cluster/test_rpc_exception.py:102: 
      _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
      
      self = <test_rpc_exception.TestRPCException object at 0x6838790>
      exception_string = None
      
          def execute_test_query(self, exception_string):
            try:
              result = self.client.execute(self.TEST_QUERY)
              assert result.data == self.EXPECTED_RESULT
              assert not exception_string
            except ImpalaBeeswaxException as e:
      >       assert exception_string in str(e)
      E       TypeError: 'in <string>' requires string as left operand, not NoneType
      
      custom_cluster/test_rpc_exception.py:52: TypeError
      

      Attachments

        Issue Links

          Activity

            People

              kwho Michael Ho
              mikeb Michael Brown
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: